remove Collections.* uses